fixing dual carousle wrapping into wrapper

--- a/blocks/tiny-carousel/tiny-carousel.css
+++ b/blocks/tiny-carousel/tiny-carousel.css
@@ -31,6 +31,10 @@
   display: flex
 }
 
+.tiny-carousel-wrapper :is(.hidden) {
+  display: none
+}
+
 .tiny-carousel-wrapper :is(.h-32) {
   height: 8rem
 }
